--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-fileupload": "0.0.6",
     "firebase": "^3.6.7",
     "firebase-admin": "^4.1.0",
-    "moment": "^2.17.1"
+    "moment": "^2.17.1",
+    "websocket": "^1.0.25"
   }
 }
